	11. Added information for developers of implementation of abstract interface.
	
jrl-dynamics version 1.5 released July 16, 2007
	
	10. (fumio) add double CjrlDynamicRobot::upperBoundDof(int, const
	vectorN&) and double CjrlDynamicRobot::upperBoundDof(int, const
	vectorN&). They compute a joint angle limit using other joint
	angles if possible.
	9. (fumio) CjrlDynamicRotot::FiniteDifferenceStateUpdate() is
	splitted into two functions. FiniteDifferenceStateEstimate() and
	SaveCurrentStateAsPastState()

jrl-dynamics version 1.4 released July 6, 2007
	
	9. (fumio) CjrlDynamicRotot::FiniteDifferenceStateUpdate() is
	splitted into two functions. FiniteDifferenceStateEstimate() and
	SaveCurrentStateAsPastState()
	
jrl-dynamics version 1.3 released June 14, 2007
	8. Added a the new class CjrlHand. It records the center a hand
	and its important axis in the relevant wrist frame.
	7. correct configure.ac to transfert flags and libs in pkgconfig
	6. erase the dependance of *.in et *.m4 with git

jrl-dynamics version 1.2 released May 14, 2007

2007/03/09
	5. Moved inclusion of "MatrixAbstractLayer.h" before other inclusions 
	to make sure matrices and vectors are defined.
2007/03/07
	4. The macros in the declaration of the vectors in the files in the
	interface have been replaced by the typedef: vector3d, matrix3d,
	vector4d, matrix4d, vectorN and matrixNxP.
	3. The files in the interface have an include of 
	"MatrixAbstractLayer/MatrixAbstractLayer.h"
	2. In CjrlHumanoidDynamicRobot, access functions to gaze
	direction and origin take const vector3d& as argument instead of
	vector3d& in order to enforce the const propery of those access
	functions. 
	
	1. Removed template in classes declarations.